# GLISS

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE  PROVENANCE.md  README.md  fpm.toml  pyproject.toml
.github/: RELEASE_NOTES_v0.0.2.md  build-release.sh  manylinux.Dockerfile
.github/workflows/: ci.yml
app/: compatible_operator_geometry_trace.f90  gliss_axisymmetric.f90  gliss_axisymmetric_fkg.f90  gliss_compatible_marginality.f90  gliss_compatible_operator_trace.f90  gliss_compatible_spectrum.f90  gliss_demo.f90  gliss_family.f90  gliss_field_profiles.f90  gliss_local_mode_diagnostic.f90  gliss_mercier.f90  gliss_newcomb.f90  gliss_primitive_geometry_trace.f90  gliss_spectrum.f90  gliss_starwall_diagnostic.f90  gliss_terpsichore_eigen.f90  gliss_terpsichore_noninteracting_stiffness.f90  gliss_terpsichore_potential_inspect.f90  gliss_terpsichore_pseudoplasma_stiffness.f90  gliss_terpsichore_reduced_mass.f90  gliss_vacuum_schur_diagnostic.f90  gvec_cas3d_compare_pointwise.f90  gvec_cas3d_inspect.f90  gvec_cas3d_integrate.f90
ci/: array_temporary_audit.sh
cmake/: EnzymeFortran.cmake  test_gliss_header.c
include/: gliss.h
python/: README.md  pyproject.toml
python/gliss/: __init__.py  _closure_registry.py  _result_schema.py  _schema_support.py  _stability_input.py  _vmec_geometry.py  axisymmetric.py  closure_manifest.json  derivatives.py  energy.py  equilibrium.py  full_schema.py  full_spectrum.py  marginality.py  mercier.py  schema.py  simsopt.py  solver.py  stability.py  terpsichore.py  vmec.py
python/tests/: test_axisymmetric.py  test_closure_registry.py  test_equilibrium.py  test_full_schema.py  test_library.py  test_marginality.py  test_mercier.py  test_schema.py  test_simsopt.py  test_stability.py  test_terpsichore.py  test_vmec.py
src/: axis_regular_harmonic_spline.f90  axisymmetric_spectrum.f90  block_tridiagonal.f90  cartesian_harmonic_spline.f90  cartesian_primitive_geometry.f90  cas3d_coefficient_mass.f90  cas3d_phase_envelope_transform.f90  compatible_block_storage.f90  compatible_compressible_stiffness_assembly.f90  compatible_family_point_assembly.f90  compatible_operator_trace_types.f90  compatible_physical_mass_assembly.f90  compatible_problem_assembly_support.f90  compatible_radial_quadrature.f90  compatible_three_component_problem.f90  compatible_two_component_problem.f90  compressible_geometry.f90  compressible_stiffness_assembly.f90  compressible_stiffness_family_assembly.f90  compressible_stiffness_validation.f90  dense_generalized_inverse_iteration.f90  dense_spectrum_support.f90  dynamic_family_layout.f90  eigenvalue_tracking.f90  export_surface_geometry.f90  family_assembly.f90  family_point_assembly.f90  field_periodic_cartesian.f90  field_profile_identities.f90  fixed_boundary_eigen_bracket.f90  fixed_boundary_energy.f90  fixed_boundary_input_validation.f90  fixed_boundary_solver_controls.f90  fixed_boundary_spectrum.f90  fourier_phase_kind.f90  generalized_block_solver.f90  gliss_axisymmetric_capi.f90  gliss_c_abi_support.f90  gliss_c_contexts.f90  gliss_capi.f90  (+70 more)
src/boundary/: starwall_cylinder_limit.f90  starwall_fourier_coupling.f90  starwall_ideal_vacuum.f90  starwall_mesh_geometry.f90
test/: check_cli_failure.cmake  check_cli_rejection.cmake  cylinder_fixture.f90  enzyme_compressible_stiffness_family_fixture.f90  enzyme_compressible_stiffness_family_gradient.f90  enzyme_compressible_stiffness_fixture.f90  enzyme_compressible_stiffness_gradient.f90  enzyme_drive_gradient.f90  enzyme_helical_cylinder_gradient.f90  enzyme_perpendicular_kinetic_gradient.f90  enzyme_phase_assembly_gradient.f90  enzyme_phase_fixture.f90  enzyme_physical_mass_assembly_fixture.f90  enzyme_physical_mass_assembly_gradient.f90  enzyme_physical_mass_family_fixture.f90  enzyme_physical_mass_family_gradient.f90  enzyme_physical_mass_gradient.f90  enzyme_terpsichore_normalization_fixture.f90  enzyme_terpsichore_normalization_gradient.f90  enzyme_terpsichore_reduced_mass_family_fixture.f90  enzyme_terpsichore_reduced_mass_family_gradient.f90  enzyme_terpsichore_reduced_mass_gradient.f90  enzyme_three_component_gradient.f90  invalid_subspace_paths.txt  invalid_subspace_vector.csv  test_axis_regular_harmonic_spline.f90  test_cartesian_harmonic_spline.f90  test_cartesian_primitive_geometry.f90  test_cas3d_coefficient_mass.f90  test_cas3d_phase_envelope_transform.f90  test_compatible_family_point_assembly.f90  test_compatible_problem_assembly_support.f90  test_compatible_radial_quadrature.f90  test_compatible_three_component_assembly.f90  test_compatible_vector_evaluation.f90  test_compressible_stiffness_assembly.f90  test_compressible_stiffness_family_assembly.f90  test_cylinder_physical_spectrum.f90  test_dense_generalized_inverse_iteration.f90  test_dynamic_family_layout.f90  (+57 more)
test/boundary/: test_starwall_fourier_coupling.f90  test_starwall_ideal_vacuum.f90
